--- a/src/main/resources/static/css/pictosPageEchange.css
+++ b/src/main/resources/static/css/pictosPageEchange.css
@@ -1,6 +1,5 @@
 .itemBox {
     width:80%;
-    padding: 10px;
     text-align: left;
     overflow: hidden;
     overflow-x: scroll;
@@ -8,24 +7,24 @@
 }
 
 .categorieItem {
-    height: 120px;
-    width:120px;
+    height: 7em;
+    width:7em;
     margin: 10px;
     border-radius:20%;
     cursor: pointer;
 }
 
 .sousCategorieItem {
-    height: 112px;
-    width:112px;
+    height: 7em;
+    width:7em;
     margin: 10px;
     border-radius:20%;
     cursor: pointer;
 }
 
 .motItem {
-    height: 108px;
-    width:108px;
+    height: 7em;
+    width:7em;
     margin: 10px;
     border-radius:20%;
 }
