--- a/src/main/resources/templates/ajouterUnMot.html
+++ b/src/main/resources/templates/ajouterUnMot.html
@@ -17,9 +17,9 @@
             <div>
                 <input placeholder="Nouveau mot à ajouter"
                        type="text"
-                       id="nomMotAjout"
+                       id="motAjout"
                        th:field="*{nom}"
-                       name="nomMotAjout"/>
+                       name="motAjout"/>
             </div>
             <br>
 
