--- a/src/main/resources/templates/components/formulaireModifierMot.html
+++ b/src/main/resources/templates/components/formulaireModifierMot.html
@@ -18,7 +18,7 @@
                     <input type="text"
                            id="motAModif"
                            th:field="*{nom}"
-                           name="nomMotModif"/>
+                           name="motModif"/>
                 </div>
             </div>
             <br>
