--- a/src/main/resources/templates/echange.html
+++ b/src/main/resources/templates/echange.html
@@ -6,19 +6,23 @@
 </head>
 
 <body>
-  <div th:replace="~{components/navBar}"></div>
+    <div style="display:none">
+        <div  th:replace="~{components/navBar}"></div>
+    </div>
+
 
   <div th:replace="~{components/pictosPageEchange}"></div>
 
   <div th:replace="~{components/dragAndDrop}"></div>
 
   <div class="d-flex justify-content-center">
-    <span id="contenuPhrase"></span>
+    <span id="contenuPhrase" class="display-4"></span>
   </div>
 
   <div th:replace="~{components/footer :: footer}"></div>
 
-
+  <script src="/js/conjugaisonPresent.js"></script>
+  <script src="/js/construireUnePhrase.js"></script>
   <script src="/js/dragAndDrop.js"></script>
   <script src="/js/recupParCategorie.js"></script>
 </body>
