--- a/src/main/resources/templates/components/navBar.html
+++ b/src/main/resources/templates/components/navBar.html
@@ -12,14 +12,10 @@
 <link rel="stylesheet"
 	  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-<style type="text/css">
-body {
-	padding-top: 10%;
-}
-</style>
+
 </head>
 <header>
-	<nav class="navbar navbar-expand-md navbar-dark fixed-top">
+	<nav class="navbar navbar-expand-md navbar-dark">
 		<div class="container-fluid">
 			<a href="#" th:href="@{/}"> <img alt="Picto Logo"
 				src="/images/Logos/Logo PNG.png" class="logo" />
@@ -121,6 +117,5 @@ body {
 			</div>
 		</div>
 	</nav>
-
 </header>
 </html>
