--- a/src/main/resources/templates/echange.html
+++ b/src/main/resources/templates/echange.html
@@ -31,7 +31,9 @@
   <script src="/js/sidebar.js"></script>
   <script src="/js/accordAdjectif.js"></script>
   <script src="/js/accordNom.js"></script>
-  <script src="/js/conjugaisonPresent.js"></script>
+  <script src="/js/present.js"></script>
+  <script src="/js/futur.js"></script>
+  <script src="/js/conjugaison.js"></script>
   <script src="/js/construireUnePhrase.js"></script>
   <script src="/js/dragAndDrop.js"></script>
   <script src="/js/recupParCategorie.js"></script>
