--- a/src/main/resources/templates/components/sideBar.html
+++ b/src/main/resources/templates/components/sideBar.html
@@ -11,7 +11,10 @@
     <i class="bi bi-play-fill icons"></i>
   </button>
   <button id="lectureMotAmot" class="iconButton">
-    <i class="bi bi-skip-forward-fill icons"></i>
+    <i class="bi bi-skip-end-fill icons"></i>
+  </button>
+  <button id="mettreAuFutur" class="iconButton">
+    <i class="bi bi-fast-forward-fill icons"></i>
   </button>
 </div>
 </div>
