--- a/src/main/resources/templates/echange.html
+++ b/src/main/resources/templates/echange.html
@@ -14,11 +14,12 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 col-lg-11">
-              <div th:replace="~{components/pictosPageEchange}"></div>
-              <div th:replace="~{components/dragAndDrop}"></div>
               <div class="d-flex justify-content-center">
                 <span id="contenuPhrase" class="display-4"></span>
               </div>
+              <div th:replace="~{components/pictosPageEchange}"></div>
+              <div th:replace="~{components/dragAndDrop}"></div>
+
         </div>
         <div class="col-12 col-lg-1 d-md-block justify-content-end vh-100">
             <div th:replace="~{components/sideBar}"></div>
@@ -33,6 +34,7 @@
   <script src="/js/accordNom.js"></script>
   <script src="/js/present.js"></script>
   <script src="/js/futur.js"></script>
+  <script src="/js/passe.js"></script>
   <script src="/js/conjugaison.js"></script>
   <script src="/js/construireUnePhrase.js"></script>
   <script src="/js/dragAndDrop.js"></script>
