--- a/src/main/resources/templates/components/dragAndDrop.html
+++ b/src/main/resources/templates/components/dragAndDrop.html
@@ -4,15 +4,17 @@
     </head>
 
     <body>
-        <ul class="target d-flex justify-content-center" id="sortable">
-                <li class="empty"></li>
-                <li class="empty"></li>
-                <li class="empty"></li>
-                <li class="empty"></li>
-                <li class="empty"></li>
-                <li class="empty"></li>
-                <li class="empty"></li>
-                <li class="empty"></li>
-        </ul>
+        <div class="d-flex justify-content-center">
+            <ul class="target rounded-4" id="sortable">
+                    <li class="empty"></li>
+                    <li class="empty"></li>
+                    <li class="empty"></li>
+                    <li class="empty"></li>
+                    <li class="empty"></li>
+                    <li class="empty"></li>
+                    <li class="empty"></li>
+                    <li class="empty"></li>
+            </ul>
+        </div>
     </body>
 </html>
