--- a/src/main/resources/templates/components/sideBar.html
+++ b/src/main/resources/templates/components/sideBar.html
@@ -6,7 +6,7 @@
 </head>
 
 
-<div class="sidebar d-flex justify-content-center align-items-center rounded-3 flex-column">
+<div class="sidebar h-40 h-lg-100 d-flex justify-content-center align-items-center rounded-4 flex-lg-column flex-row">
   <button id="lecturePhrase" class="iconButton">
     <i class="bi bi-play-fill icons"></i>
   </button>
@@ -19,7 +19,10 @@
   <button id="lectureMotAmot" class="iconButton">
     <i class="bi bi-skip-end-fill icons"></i>
   </button>
+  <button id="supprimerPictos" class="iconButton">
+    <i class="bi bi-trash-fill icons"></i>
+  </button>
 </div>
-</div>
+
 
 </html>
