Changement de la voix + Modif conjugaison si sujet = '....et....'

--- a/src/main/resources/templates/components/sideBar.html
+++ b/src/main/resources/templates/components/sideBar.html
@@ -6,7 +6,7 @@
 </head>
 
 
-<div class="sidebar h-40 h-lg-100 d-flex justify-content-center align-items-center rounded-4 flex-lg-column flex-row">
+<div class="sidebar me-lg-3 mt-1 mt-lg-5 h-40 h-lg-100 d-flex justify-content-center align-items-center rounded-4 flex-lg-column flex-row">
   <button id="lecturePhrase" class="iconButton">
     <i class="bi bi-play-fill icons"></i>
   </button>
