--- a/src/main/resources/templates/echange.html
+++ b/src/main/resources/templates/echange.html
@@ -24,13 +24,13 @@
                     <li><a class="dropdown-item" href="#">Question 3</a></li>
                 </ul>
               </div>
-              <div class="phraseConteneur d-flex justify-content-center rounded-4">
+              <div class="phraseConteneur pe-lg-2 d-flex justify-content-center rounded-4">
                 <span id="contenuPhrase"></span>
               </div>
               <div th:replace="~{components/dragAndDrop}"></div>
               <div th:replace="~{components/pictosPageEchange}"></div>
         </div>
-        <div class="sidebarConteneur col-12 col-lg-1">
+        <div class="sidebarConteneur pe-lg-3 col-12 col-lg-1">
             <div th:replace="~{components/sideBar}"></div>
         </div>
       </div>
