--- a/src/main/resources/templates/components/sideBar.html
+++ b/src/main/resources/templates/components/sideBar.html
@@ -19,6 +19,9 @@
   <button id="lectureMotAmot" class="iconButton">
     <i class="bi bi-skip-end-fill icons"></i>
   </button>
+  <button id="negation" class="iconButton">
+    <i class="bi bi-hand-thumbs-down-fill icons"></i>
+  </button>
   <button id="supprimerPictos" class="iconButton">
     <i class="bi bi-trash-fill icons"></i>
   </button>
