--- a/src/main/resources/templates/echange.html
+++ b/src/main/resources/templates/echange.html
@@ -24,7 +24,7 @@
                     <li><a class="dropdown-item" href="#">Question 3</a></li>
                 </ul>
               </div>
-              <div class="phraseConteneur pe-lg-2 d-flex justify-content-center rounded-4">
+              <div class="phraseConteneur pe-lg-2 d-flex justify-content-center align-items-center rounded-4">
                 <span id="contenuPhrase"></span>
               </div>
               <div th:replace="~{components/dragAndDrop}"></div>
