--- a/src/main/resources/templates/components/sideBar.html
+++ b/src/main/resources/templates/components/sideBar.html
@@ -19,7 +19,10 @@
   <button id="lectureMotAmot" class="iconButton">
     <i class="bi bi-skip-end-fill icons"></i>
   </button>
-  <button id="negation" class="iconButton">
+  <button id="formeAffirmative" class="iconButton">
+    <i class="bi bi-hand-thumbs-up-fill icons"></i>
+  </button>
+  <button id="formeNegative" class="iconButton">
     <i class="bi bi-hand-thumbs-down-fill icons"></i>
   </button>
   <button id="supprimerPictos" class="iconButton">
