--- a/src/main/resources/templates/echange.html
+++ b/src/main/resources/templates/echange.html
@@ -41,6 +41,7 @@
 
   <script src="/js/accordAdjectif.js"></script>
   <script src="/js/accordNom.js"></script>
+  <script src="/js/negation.js"></script>
   <script src="/js/present.js"></script>
   <script src="/js/futur.js"></script>
   <script src="/js/passe.js"></script>
