transformer en question OK

--- a/src/main/resources/static/css/sidebar.css
+++ b/src/main/resources/static/css/sidebar.css
@@ -57,3 +57,8 @@
   background:#A02B36;
   box-shadow: inset -2px -2px 4px #941A25, inset 2px 2px 4px #eb8e97;
 }
+
+#formeInterrogative{
+  background:#c7960e;
+  box-shadow: inset -2px -2px 4px #9f7b17, inset 2px 2px 4px #ffca3a;
+}
