--- a/src/main/resources/templates/components/sideBar.html
+++ b/src/main/resources/templates/components/sideBar.html
@@ -25,6 +25,9 @@
   <button id="formeNegative" class="iconButton">
     <i class="bi bi-hand-thumbs-down-fill icons"></i>
   </button>
+  <button id="formeInterrogative" class="iconButton">
+    <i class="bi bi-question-lg icons"></i>
+  </button>
   <button id="supprimerPictos" class="iconButton">
     <i class="bi bi-trash-fill icons"></i>
   </button>
