--- a/src/main/resources/templates/echange.html
+++ b/src/main/resources/templates/echange.html
@@ -41,10 +41,11 @@
 
   <script src="/js/accordAdjectif.js"></script>
   <script src="/js/accordNom.js"></script>
-  <script src="/js/negation.js"></script>
-  <script src="/js/present.js"></script>
-  <script src="/js/futur.js"></script>
-  <script src="/js/passe.js"></script>
+  <script src="/js/formeNegative.js"></script>
+  <script src="/js/formeInterrogative.js"></script>
+  <script src="/js/conjuguerAuPresent.js"></script>
+  <script src="/js/conjuguerAuFutur.js"></script>
+  <script src="/js/conjuguerAuPasse.js"></script>
   <script src="/js/conjugaison.js"></script>
   <script src="/js/construireUnePhrase.js"></script>
   <script src="/js/dragAndDrop.js"></script>
