--- a/src/main/resources/templates/echange.html
+++ b/src/main/resources/templates/echange.html
@@ -19,9 +19,9 @@
                     Choisir une question
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Question 1</a></li>
-                    <li><a class="dropdown-item" href="#">Question 2</a></li>
-                    <li><a class="dropdown-item" href="#">Question 3</a></li>
+                    <li><a class="dropdown-item" >Question 1</a></li>
+                    <li><a class="dropdown-item" >Question 2</a></li>
+                    <li><a class="dropdown-item" >Question 3</a></li>
                 </ul>
               </div>
               <div class="phraseConteneur pe-lg-2 d-flex justify-content-center align-items-center rounded-4">
@@ -30,7 +30,7 @@
               <div th:replace="~{components/dragAndDrop}"></div>
               <div th:replace="~{components/pictosPageEchange}"></div>
         </div>
-        <div class="sidebarConteneur pe-lg-3 col-12 col-lg-1">
+        <div class="sidebarConteneur pt-lg-4 pe-lg-4 col-12 col-lg-1">
             <div th:replace="~{components/sideBar}"></div>
         </div>
       </div>
