--- a/src/main/resources/templates/components/formulaireModifierMot.html
+++ b/src/main/resources/templates/components/formulaireModifierMot.html
@@ -55,7 +55,11 @@
             <br>
               <div class="d-flex flex-column">
                   <label for="pictoFileModifImage">Modifier l'image</label>
-                  <input type="file" id="pictoFileModifImage" name="pictoFileModifImage" accept="image/*"/>
+                  <input type="file"
+                         id="pictoFileModifImage"
+                         class="form-control form-control-sm"
+                         name="pictoFileModifImage"
+                         accept="image/*"/>
               </div>
             <br>
 
